# soundaudit

./: .gitignore  CHANGELOG.md  DEV_PLAN.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: fix_missing_tracknums.py  fix_navidrome_tags.py
src/soundaudit/: __init__.py  __main__.py  cli.py  config.py  fingerprint.py  models.py  organizer.py  paths.py
src/soundaudit/actuator/: tags.py
src/soundaudit/analyzer/: __init__.py  acoustid.py  duplicates.py  normalize.py  standardize.py  transcode.py
src/soundaudit/db/: store.py
src/soundaudit/reporter/: __init__.py
src/soundaudit/resolver/: __init__.py  musicbrainz.py
src/soundaudit/scanner/: extractor.py  walker.py
src/soundaudit/tui/: __init__.py  app.py  screens.py  soundaudit.tcss
tests/: conftest.py  test_acoustid.py  test_cli.py  test_duplicates.py  test_fingerprint.py  test_normalize.py  test_organizer.py  test_reporter.py  test_resolver.py  test_store.py  test_tags.py  test_transcode.py
