[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundaudit"
dynamic = ["version"]
description = "Music library health scanner and metadata repair tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nuno", email = "nnunodev@users.noreply.github.com" },
]
keywords = ["music", "flac", "metadata", "duplicates", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mutagen>=1.47",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-yaml>=1.3",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "xxhash>=3.4",
    "jinja2>=3.1",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "textual>=0.58",
]

[project.scripts]
soundaudit = "soundaudit.cli:app"

[project.urls]
Homepage = "https://github.com/nnunodev/soundaudit"
Repository = "https://github.com/nnunodev/soundaudit"
Issues = "https://github.com/nnunodev/soundaudit/issues"

[tool.hatch.version]
path = "src/soundaudit/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
